@@ -1,3 +1,12 @@
+2009-09-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	PR libfortran/41169
+	* inclhack.def (irix_complex): New fix.
+	(solaris_complex): Likewise.
+	* fixincl.x: Regenerate.
+	* tests/base/complex.h [IRIX_COMPLEX_CHECK, SOLARIS_COMPLEX_CHECK]:
+	New tests.
+
 2009-08-28   Bruce Korb <bkorb@gnu.org>
 	     Steve Ellcey  <sje@cup.hp.com>
 
